Step2: 메뉴 도메인 리팩토링 (#143)
* chore: 1주차 테스트 코드와 2주차 README 가져오기

* feat(menus): 메뉴 그룹 이름

* test(menus): 메뉴 그룹 이름

* feat(menus): MenuGroup, MenuGroupRepository

* refactor(menus): domain 패키지 내에서 exception, model, repository 로 세부 분류

* refactor(menus): MenuGroup 클라이언트 편의를 위해 생성자 오버로딩

* feat(menus): 메뉴 도메인 구현

* test(menus): 메뉴 도메인 단위 테스트

* bugfix: Repository 잘못된 import 변경, @Query 메서드 오버라이딩 누락 추가

* refactor(products): 이벤트 발생시 AbstractAggregateRoot 대신 SpringContainer 사용

* test: 이벤트 발생 주체와 handler 테스트

* refactor(menus): ProductPriceChanged 이벤트 핸들링을 별도의 트랜잭션에서 비동기로 수행하도록 변경

* feat(menus): 테스트용 fake 메뉴 리포지토리 구현

* test(menus): 가짜 객체를 이용해 이벤트 핸들러 테스트

* bugfix: 자잘한 오류 수정

1. MenuRepository: JpaMenuRepository와 중복 메서드 시그니처 통일
2. TobeMenuRepository 에서 Legacy Menu로 작성된 jpql을 native sql로 수정
3. TestConfig: 빈 줄 삭제