@@ -1,127 +1,104 @@
 package kitchenpos;
 
-import kitchenpos.eatinorders.domain.*;
+import kitchenpos.eatinorders.domain.Order;
+import kitchenpos.eatinorders.domain.OrderLineItem;
+import kitchenpos.eatinorders.domain.OrderTable;
+import kitchenpos.eatinorders.domain.OrderType;
 import kitchenpos.menus.domain.Menu;
 import kitchenpos.menus.domain.MenuGroup;
 import kitchenpos.menus.domain.MenuProduct;
 import kitchenpos.products.domain.Product;
 
 import java.math.BigDecimal;
-import java.time.LocalDateTime;
-import java.util.Arrays;
-import java.util.Random;
-import java.util.UUID;
+import java.util.List;
 
 public class Fixtures {
-    public static final UUID INVALID_ID = new UUID(0L, 0L);
 
-    public static Menu menu() {
-        return menu(19_000L, true, menuProduct());
+    public static MenuGroup aMenuGroup() {
+        return new MenuGroup("한마리치킨");
     }
 
-    public static Menu menu(final long price, final MenuProduct... menuProducts) {
-        return menu(price, false, menuProducts);
+    public static Product aChickenProduct(int price) {
+        return aProduct("후라이드 치킨", price);
     }
 
-    public static Menu menu(final long price, final boolean displayed, final MenuProduct... menuProducts) {
-        final Menu menu = new Menu();
-        menu.setId(UUID.randomUUID());
-        menu.setName("후라이드+후라이드");
-        menu.setPrice(BigDecimal.valueOf(price));
-        menu.setMenuGroup(menuGroup());
-        menu.setDisplayed(displayed);
-        menu.setMenuProducts(Arrays.asList(menuProducts));
-        return menu;
+    public static Product aProduct(String name, int price) {
+        Product product = new Product();
+        product.setName(name);
+        product.setPrice(BigDecimal.valueOf(price));
+        return product;
     }
 
-    public static MenuGroup menuGroup() {
-        return menuGroup("두마리메뉴");
+    public static MenuProduct aChickenMenuProduct(int price, int quantity) {
+        return aMenuProduct(aChickenProduct(price), quantity);
     }
 
-    public static MenuGroup menuGroup(final String name) {
-        final MenuGroup menuGroup = new MenuGroup();
-        menuGroup.setId(UUID.randomUUID());
-        menuGroup.setName(name);
-        return menuGroup;
-    }
-
-    public static MenuProduct menuProduct() {
-        final MenuProduct menuProduct = new MenuProduct();
-        menuProduct.setSeq(new Random().nextLong());
-        menuProduct.setProduct(product());
-        menuProduct.setQuantity(2L);
-        return menuProduct;
-    }
-
-    public static MenuProduct menuProduct(final Product product, final long quantity) {
-        final MenuProduct menuProduct = new MenuProduct();
-        menuProduct.setSeq(new Random().nextLong());
+    public static MenuProduct aMenuProduct(Product product, int quantity) {
+        MenuProduct menuProduct = new MenuProduct();
         menuProduct.setProduct(product);
+        menuProduct.setProductId(product.getId());
         menuProduct.setQuantity(quantity);
         return menuProduct;
     }
 
-    public static Order order(final OrderStatus status, final String deliveryAddress) {
-        final Order order = new Order();
-        order.setId(UUID.randomUUID());
+    public static Menu aManWonChickenMenu(int price) {
+        return aMenu("후라이드 치킨", price, aChickenMenuProduct(1, 10_000));
+    }
+
+    public static Menu aMenu(String name, int price, MenuProduct... menuProducts) {
+        return aMenu(name, price, aMenuGroup(), menuProducts);
+    }
+
+    public static Menu aMenu(String name, int price, MenuGroup menuGroup, MenuProduct... menuProducts) {
+        Menu menu = new Menu();
+        menu.setName(name);
+        menu.setPrice(BigDecimal.valueOf(price));
+        menu.setMenuProducts(List.of(menuProducts));
+        menu.setDisplayed(true);
+        menu.setMenuGroup(menuGroup);
+        menu.setMenuGroupId(menuGroup.getId());
+        return menu;
+    }
+
+    public static OrderLineItem anOrderLineItem(Menu menu, int quantity) {
+        OrderLineItem oli = new OrderLineItem();
+        oli.setMenu(menu);
+        oli.setMenuId(menu.getId());
+        oli.setQuantity(quantity);
+        oli.setPrice(menu.getPrice().multiply(BigDecimal.valueOf(quantity)));
+        return oli;
+    }
+
+    public static OrderTable anOrderTable(boolean occupied) {
+        return anOrderTable("1번 테이블", occupied);
+    }
+
+    public static OrderTable anOrderTable(String name, boolean occupied) {
+        return anOrderTable(name, occupied, 0);
+    }
+
+    public static OrderTable anOrderTable(String name, boolean occupied, int numberOfGuests) {
+        OrderTable orderTable = new OrderTable();
+        orderTable.setName(name);
+        orderTable.setOccupied(occupied);
+        orderTable.setNumberOfGuests(numberOfGuests);
+        return orderTable;
+    }
+
+    public static Order aDeliveryOrder(String deliveryAddress, OrderLineItem... orderLineItems) {
+        Order order = new Order();
         order.setType(OrderType.DELIVERY);
-        order.setStatus(status);
-        order.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        order.setOrderLineItems(Arrays.asList(orderLineItem()));
+        order.setOrderLineItems(List.of(orderLineItems));
         order.setDeliveryAddress(deliveryAddress);
         return order;
     }
 
-    public static Order order(final OrderStatus status) {
-        final Order order = new Order();
-        order.setId(UUID.randomUUID());
-        order.setType(OrderType.TAKEOUT);
-        order.setStatus(status);
-        order.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        order.setOrderLineItems(Arrays.asList(orderLineItem()));
-        return order;
-    }
-
-    public static Order order(final OrderStatus status, final OrderTable orderTable) {
-        final Order order = new Order();
-        order.setId(UUID.randomUUID());
+    public static Order anEatInOrder(OrderTable orderTable, OrderLineItem... orderLineItems) {
+        Order order = new Order();
         order.setType(OrderType.EAT_IN);
-        order.setStatus(status);
-        order.setOrderDateTime(LocalDateTime.of(2020, 1, 1, 12, 0));
-        order.setOrderLineItems(Arrays.asList(orderLineItem()));
+        order.setOrderLineItems(List.of(orderLineItems));
         order.setOrderTable(orderTable);
+        order.setOrderTableId(orderTable.getId());
         return order;
-    }
-
-    public static OrderLineItem orderLineItem() {
-        final OrderLineItem orderLineItem = new OrderLineItem();
-        orderLineItem.setSeq(new Random().nextLong());
-        orderLineItem.setMenu(menu());
-        return orderLineItem;
-    }
-
-    public static OrderTable orderTable() {
-        return orderTable(false, 0);
-    }
-
-    public static OrderTable orderTable(final boolean occupied, final int numberOfGuests) {
-        final OrderTable orderTable = new OrderTable();
-        orderTable.setId(UUID.randomUUID());
-        orderTable.setName("1번");
-        orderTable.setNumberOfGuests(numberOfGuests);
-        orderTable.setOccupied(occupied);
-        return orderTable;
-    }
-
-    public static Product product() {
-        return product("후라이드", 16_000L);
-    }
-
-    public static Product product(final String name, final long price) {
-        final Product product = new Product();
-        product.setId(UUID.randomUUID());
-        product.setName(name);
-        product.setPrice(BigDecimal.valueOf(price));
-        return product;
     }
 }
